--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -1,3 +1,33 @@
 {
-    "text": "Кыргызча текст"
+    "text": "Кыргызча текст",
+    "header": {
+        "search": "Издөө",
+        "catalogue": "Каталог",
+        "services": "Кызматтар",
+        "calculator": "Онлайн калькулятор",
+        "ourcompany": "Биздин компания"
+    },
+    "main": {},
+    "footer": {
+        "aboutus": {
+            "name": "Биз жөнүндө",
+            "contacts": "Байланыштар",
+            "locations": "Жайгашкан жерлер",
+            "review": "Обзор",
+            "promotion": "Акциялар"
+        },
+        "support": {
+            "name": "Колдоо",
+            "feedback": "Кайра байланыш",
+            "delivery": "Жеткирүү шарттары",
+            "refund": "Төлөмдү кайтаруу",
+            "howtoorder": "Кантип заказ кылса болот?"
+        },
+        "selection": {
+            "name": "Тандоо жана сатып алуу",
+            "lineup": "Модельный ряд",
+            "services": "Финансылык кызматтар",
+            "testdrive": "Тест-Драйв"
+        }
+    }
 }
