--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,3 +1,33 @@
 {
-    "text" : "Текст"
+    "text": "Текст",
+    "header": {
+        "search": "Поиск",
+        "catalogue": "Каталог",
+        "services": "Услуги",
+        "calculator": "Онлайн калькулятор",
+        "ourcompany": "Наша компания"
+    },
+    "main": {},
+    "footer": {
+        "aboutus": {
+            "name": "О нас",
+            "contacts": "Контакты",
+            "locations": "Локации",
+            "review": "Обзор",
+            "promotion": "Акции"
+        },
+        "support": {
+            "name": "Поддержка",
+            "feedback": "Обратная связь",
+            "delivery": "Условия доставки",
+            "refund": "Возврат",
+            "howtoorder": "Как оформить заказ?"
+        },
+        "selection": {
+            "name": "Выбор и покупка",
+            "lineup": "Модельный ряд",
+            "services": "Финансовые сервисы",
+            "testdrive": "Тест-драйв"
+        }
+    }
 }
