--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,33 +1,43 @@
 {
-    "text": "Text",
-    "header": {
-        "search": "Search",
-        "catalogue": "Catalogue",
-        "services": "Services",
-        "calculator": "Online calculator",
-        "ourcompany": "Our Company"
-    },
-    "main": {},
-    "footer": {
-        "aboutus": {
-            "name": "About Us",
-            "contacts": "Contacts",
-            "locations": "Locations",
-            "review": "Review",
-            "promotion": "Promotion"
-        },
-        "support": {
-            "name": "Support",
-            "feedback": "Feedback",
-            "delivery": "Delivery terms",
-            "refund": "Refund",
-            "howtoorder": "How to place an order?"
-        },
-        "selection":{
-            "name": "Selection and purchase",
-            "lineup": "The lineup",
-            "services": "Financial services",
-            "testdrive": "Test Drive"
-        } 
+  "text": "Text",
+  "header": {
+    "search": "Search",
+    "catalogue": "Catalogue",
+    "services": "Services",
+    "calculator": "Online calculator",
+    "ourcompany": "Our Company"
+  },
+  "main": {
+    "model": "Popular models",
+    "countries": {
+      "title": "Сountry",
+      "items": {
+        "korea": "Korea",
+        "china": "China",
+        "japan": "Japan"
+      }
     }
+  },
+  "footer": {
+    "aboutus": {
+      "name": "About Us",
+      "contacts": "Contacts",
+      "locations": "Locations",
+      "review": "Review",
+      "promotion": "Promotion"
+    },
+    "support": {
+      "name": "Support",
+      "feedback": "Feedback",
+      "delivery": "Delivery terms",
+      "refund": "Refund",
+      "howtoorder": "How to place an order?"
+    },
+    "selection": {
+      "name": "Selection and purchase",
+      "lineup": "The lineup",
+      "services": "Financial services",
+      "testdrive": "Test Drive"
+    }
+  }
 }
