--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -4,7 +4,7 @@
         "search": "Издөө",
         "catalogue": "Каталог",
         "services": "Кызматтар",
-        "calculator": "Онлайн калькулятор",
+        "calculator": "Калькулятор",
         "ourcompany": "Биздин компания"
     },
     "main": {},
