--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -5,7 +5,7 @@
         "search": "搜索",
         "catalogue": "目录",
         "services": "服务",
-        "calculator": "在线计算器",
+        "calculator": "计算器",
         "ourcompany": "我们公司"
     },
 
