--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,7 +4,7 @@
     "search": "Поиск",
     "catalogue": "Каталог",
     "services": "Услуги",
-    "calculator": "Онлайн калькулятор",
+    "calculator": "Калькулятор",
     "ourcompany": "Наша компания"
   },
   "main": {
