--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,7 +4,7 @@
     "search": "Search",
     "catalogue": "Catalogue",
     "services": "Services",
-    "calculator": "Online calculator",
+    "calculator": "Calculator",
     "ourcompany": "Our Company"
   },
   "main": {
