add one more row

--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -21,23 +21,29 @@
   "footer": {
     "aboutus": {
       "name": "Биз жөнүндө",
-      "contacts": "Байланыштар",
+      "company": "Биздин компания",
       "locations": "Жайгашкан жерлер",
-      "review": "Обзор",
-      "promotion": "Акциялар"
+      "contacts": "Байланыштары",
+      "services": "Кызматтар"
     },
     "support": {
       "name": "Колдоо",
       "feedback": "Кайра байланыш",
-      "delivery": "Жеткирүү шарттары",
+      "counseling": "Онлайн консультациялар",
       "refund": "Төлөмдү кайтаруу",
-      "howtoorder": "Кантип заказ кылса болот?"
+      "insurance": "Каржы жана камсыздандыруу кызматтары"
     },
-    "selection": {
-      "name": "Тандоо жана сатып алуу",
-      "lineup": "Модельный ряд",
-      "services": "Финансылык кызматтар",
-      "testdrive": "Тест-Драйв"
+    "branches": {
+      "name": "Биздин филиалдар",
+      "address1": "VMG5+F44, Горький, Бишкек ш., Шабдан Баатыр көч",
+      "address2": "Бишкек ш., Анкара көч. 38а",
+      "address3": "ст. Исакеева 1/2, Бишкек ш"
+    },
+    "contacts": {
+      "name": "Байланыштар",
+      "number1": "+996 (555) 25-12-56",
+      "number2": "+996 (700) 22-25-32",
+      "number3": "+996 (708) 04-02-90"
     }
   }
 }
