--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -21,23 +21,29 @@
   "footer": {
     "aboutus": {
       "name": "About Us",
+      "company": "Our company",
+      "locations": "Our branches",
       "contacts": "Contacts",
-      "locations": "Locations",
-      "review": "Review",
-      "promotion": "Promotion"
+      "services": "Services"
     },
     "support": {
       "name": "Support",
       "feedback": "Feedback",
-      "delivery": "Delivery terms",
+      "counseling": "Online consultations",
       "refund": "Refund",
-      "howtoorder": "How to place an order?"
+      "insurance": "Financial and insurance services"
     },
-    "selection": {
-      "name": "Selection and purchase",
-      "lineup": "The lineup",
-      "services": "Financial services",
-      "testdrive": "Test Drive"
+    "branches": {
+      "name": "Our branches",
+      "address1": "VMG5+F44, Gorky, Shabdan Baatyr St., Bishkek",
+      "address2": "38a Ankara str., Bishkek",
+      "address3": "ul. Isakeeva 1/2, Bishkek city"
+    },
+    "contacts": {
+      "name": "Contacts",
+      "number1": "+996 (555) 25-12-56",
+      "number2": "+996 (700) 22-25-32",
+      "number3": "+996 (708) 04-02-90"
     }
   }
 }
