--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -21,23 +21,29 @@
   "footer": {
     "aboutus": {
       "name": "О нас",
+      "company": "Наша копмания",
+      "locations": "Наши филиалы",
       "contacts": "Контакты",
-      "locations": "Локации",
-      "review": "Обзор",
-      "promotion": "Акции"
+      "services": "Услуги"
     },
     "support": {
       "name": "Поддержка",
       "feedback": "Обратная связь",
-      "delivery": "Условия доставки",
-      "refund": "Возврат",
-      "howtoorder": "Как оформить заказ?"
+      "counseling": "Онлайн-консультации",
+      "refund": "Гарантии",
+      "insurance": "Финансовые и страховые услуги "
     },
-    "selection": {
-      "name": "Выбор и покупка",
-      "lineup": "Модельный ряд",
-      "services": "Финансовые сервисы",
-      "testdrive": "Тест-драйв"
+    "branches": {
+      "name": "Наши филиалы",
+      "address1": "VMG5+F44, горького, ул.Шабдан баатыра, Бишкек",
+      "address2": "ул.Анкара 38а, Бишкек",
+      "address3": "ул. Исакеева 1/2, г. Бишкек"
+    },
+    "contacts": {
+      "name": "Контакты",
+      "number1": "+996 (555) 25-12-56",
+      "number2": "+996 (700) 22-25-32",
+      "number3": "+996 (708) 04-02-90"
     }
   }
 }
