--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,16 +5,37 @@
     "catalogue": "Каталог",
     "services": "Услуги",
     "calculator": "Калькулятор",
-    "ourcompany": "Наша компания"
+    "ourcompany": "Наша компания",
+    "HeaderCatalog": {
+      "model": "Популярные модели",
+      "countries": {
+        "title": "Страна",
+        "items": {
+          "korea": "Корея",
+          "china": "Китай",
+          "japan": "Япония"
+        }
+      }
+    }
   },
-  "main": {
-    "model": "Популярные модели",
-    "countries": {
-      "title": "Страна",
-      "items": {
-        "korea": "Корея",
-        "china": "Китай",
-        "japan": "Япония"
+  "HomePage": {
+    "GreetingBlock": {
+      "title": "Добро пожаловать в автосалон Impex Corp",
+      "text": "Impex Corp — это авто компания, которая предлагает своим клиентам широкий ассортимент товаров и услуг, связанных с автомобильной индустрией. Став ведущим игроком на рынке, Impex Corp обладает несколькими ключевыми преимуществами, которые делают их идеальным выбором для покупателей",
+      "buttonText": "Подробнее"
+    },
+    "CatalogBlock":{
+      "titles": {
+        "mainTitle":"Каталог",
+        "newProducts": "Новинки",
+        "fromChina": "Авто из Китая",
+        "fromKorea": "Авто из Кореи"
+      },
+      "buttonText": "Подробнее"
+    },
+    "FAQBlock":{
+      "titles":{
+        "mainTitle": "Часто задаваемые вопросы"
       }
     }
   },
