--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -5,16 +5,37 @@
     "catalogue": "Каталог",
     "services": "Кызматтар",
     "calculator": "Калькулятор",
-    "ourcompany": "Биздин компания"
+    "ourcompany": "Биздин компания",
+    "HeaderCatalog":{
+      "model": "Популярдуу моделдер",
+      "countries": {
+        "title": "Өлкө",
+        "items": {
+          "korea": "Корея",
+          "china": "Кытай",
+          "japan": "Жапония"
+        }
+      }
+     }
   },
-  "main": {
-    "model": "Популярдуу моделдер",
-    "countries": {
-      "title": "Өлкө",
-      "items": {
-        "korea": "Корея",
-        "china": "Кытай",
-        "japan": "Жапония"
+  "HomePage": {
+    "GreetingBlock": {
+      "title": "Impex Corp автосалонуна кош келиңиз",
+      "text": "Impex Corp - бул өз кардарларына автомобиль өнөр жайы менен байланышкан өнүмдөрдү жана кызматтардын кеңири спектрин сунуш кылган автокомпания. Рынокто алдыңкы оюнчу болуп, Impex Corp бир нече негизги артыкчылыктарга ээ, алар сатып алуучулар үчүн идеалдуу тандоо болуп саналат.",
+      "buttonText": "Кененирээк"
+    },
+    "CatalogBlock":{
+      "titles": {
+        "mainTitle":"Каталог",
+        "newProducts": "Жаңы унаалар",
+        "fromChina": "Кытайдан келген унаалар",
+        "fromKorea": "Кореядан келген унаалар"
+      },
+      "buttonText": "Кененирээк"
+    },
+    "FAQBlock":{
+      "titles":{
+        "mainTitle": "Көп берилүүчү суроолор"
       }
     }
   },
