--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -1,22 +1,41 @@
 {
   "text": "文本",
-
   "header": {
     "search": "搜索",
     "catalogue": "目录",
     "services": "服务",
     "calculator": "计算器",
-    "ourcompany": "我们公司"
+    "ourcompany": "我们公司",
+    "HeaderCatalog": {
+      "model": "热门车型",
+      "countries": {
+        "title": "个国家",
+        "items": {
+          "korea": "韩国",
+          "china": "中国",
+          "japan": "日本"
+        }
+      }
+    }
   },
-
-  "main": {
-    "model": "热门车型",
-    "countries": {
-      "title": "个国家",
-      "items": {
-        "korea": "韩国",
-        "china": "中国",
-        "japan": "日本"
+  "HomePage": {
+    "GreetingBlock": {
+      "title": "欢迎来到 Impex Corp 汽车展厅",
+      "text": "Impex Corp 是一家汽车公司，为客户提供与汽车行业相关的广泛产品和服务。 Impex Corp 已成为市场领先者，拥有多项关键优势，使其成为买家的理想选择",
+      "buttonText": "更多细节"
+    },
+    "CatalogBlock":{
+      "titles": {
+        "mainTitle":"目录",
+        "newProducts": "新东西",
+        "fromChina": "来自中国的汽车",
+        "fromKorea": "来自韩国的汽车"
+      },
+      "buttonText": "更多细节"
+    },
+    "FAQBlock":{
+      "titles":{
+        "mainTitle": "常问问题"
       }
     }
   },
