--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -24,17 +24,17 @@
       "text": "Impex Corp — это авто компания, которая предлагает своим клиентам широкий ассортимент товаров и услуг, связанных с автомобильной индустрией. Став ведущим игроком на рынке, Impex Corp обладает несколькими ключевыми преимуществами, которые делают их идеальным выбором для покупателей",
       "buttonText": "Подробнее"
     },
-    "CatalogBlock":{
+    "CatalogBlock": {
       "titles": {
-        "mainTitle":"Каталог",
+        "mainTitle": "Каталог",
         "newProducts": "Новинки",
         "fromChina": "Авто из Китая",
         "fromKorea": "Авто из Кореи"
       },
       "buttonText": "Подробнее"
     },
-    "FAQBlock":{
-      "titles":{
+    "FAQBlock": {
+      "titles": {
         "mainTitle": "Часто задаваемые вопросы"
       }
     }
@@ -43,16 +43,12 @@
     "aboutus": {
       "name": "О нас",
       "company": "Наша копмания",
-      "locations": "Наши филиалы",
-      "contacts": "Контакты",
       "services": "Услуги"
     },
     "support": {
       "name": "Поддержка",
       "feedback": "Обратная связь",
-      "counseling": "Онлайн-консультации",
-      "refund": "Гарантии",
-      "insurance": "Финансовые и страховые услуги "
+      "counseling": "Онлайн-консультации"
     },
     "branches": {
       "name": "Наши филиалы",
