--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -6,7 +6,7 @@
     "services": "Кызматтар",
     "calculator": "Калькулятор",
     "ourcompany": "Биздин компания",
-    "HeaderCatalog":{
+    "HeaderCatalog": {
       "model": "Популярдуу моделдер",
       "countries": {
         "title": "Өлкө",
@@ -16,7 +16,7 @@
           "japan": "Жапония"
         }
       }
-     }
+    }
   },
   "HomePage": {
     "GreetingBlock": {
@@ -24,17 +24,17 @@
       "text": "Impex Corp - бул өз кардарларына автомобиль өнөр жайы менен байланышкан өнүмдөрдү жана кызматтардын кеңири спектрин сунуш кылган автокомпания. Рынокто алдыңкы оюнчу болуп, Impex Corp бир нече негизги артыкчылыктарга ээ, алар сатып алуучулар үчүн идеалдуу тандоо болуп саналат.",
       "buttonText": "Кененирээк"
     },
-    "CatalogBlock":{
+    "CatalogBlock": {
       "titles": {
-        "mainTitle":"Каталог",
+        "mainTitle": "Каталог",
         "newProducts": "Жаңы унаалар",
         "fromChina": "Кытайдан келген унаалар",
         "fromKorea": "Кореядан келген унаалар"
       },
       "buttonText": "Кененирээк"
     },
-    "FAQBlock":{
-      "titles":{
+    "FAQBlock": {
+      "titles": {
         "mainTitle": "Көп берилүүчү суроолор"
       }
     }
@@ -43,16 +43,12 @@
     "aboutus": {
       "name": "Биз жөнүндө",
       "company": "Биздин компания",
-      "locations": "Жайгашкан жерлер",
-      "contacts": "Байланыштары",
       "services": "Кызматтар"
     },
     "support": {
       "name": "Колдоо",
       "feedback": "Кайра байланыш",
-      "counseling": "Онлайн консультациялар",
-      "refund": "Төлөмдү кайтаруу",
-      "insurance": "Каржы жана камсыздандыруу кызматтары"
+      "counseling": "Онлайн консультациялар"
     },
     "branches": {
       "name": "Биздин филиалдар",
