finished first-block

--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -6,7 +6,7 @@
     "services": "Кызматтар",
     "calculator": "Калькулятор",
     "ourcompany": "Биздин компания",
-    "HeaderCatalog":{
+    "HeaderCatalog": {
       "model": "Популярдуу моделдер",
       "countries": {
         "title": "Өлкө",
@@ -16,7 +16,7 @@
           "japan": "Жапония"
         }
       }
-     }
+    }
   },
   "HomePage": {
     "GreetingBlock": {
@@ -24,19 +24,22 @@
       "text": "Impex Corp - бул өз кардарларына автомобиль өнөр жайы менен байланышкан өнүмдөрдү жана кызматтардын кеңири спектрин сунуш кылган автокомпания. Рынокто алдыңкы оюнчу болуп, Impex Corp бир нече негизги артыкчылыктарга ээ, алар сатып алуучулар үчүн идеалдуу тандоо болуп саналат.",
       "buttonText": "Кененирээк"
     },
-    "CatalogBlock":{
+    "CatalogBlock": {
       "titles": {
-        "mainTitle":"Каталог",
+        "mainTitle": "Каталог",
         "newProducts": "Жаңы унаалар",
         "fromChina": "Кытайдан келген унаалар",
         "fromKorea": "Кореядан келген унаалар"
       },
       "buttonText": "Кененирээк"
     },
-    "FAQBlock":{
-      "titles":{
+    "FAQBlock": {
+      "titles": {
         "mainTitle": "Көп берилүүчү суроолор"
       }
+    },
+    "firstBlock": {
+      "title": "коопсуздук, ишенимдүүлүк жана ар бир майда-чүйдөсүнө чейин стиль!"
     }
   },
   "footer": {
@@ -66,5 +69,8 @@
       "number2": "+996 (700) 22-25-32",
       "number3": "+996 (708) 04-02-90"
     }
+  },
+  "uiButton": {
+    "title": "Чалуу"
   }
 }
