--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -25,19 +25,22 @@
       "text": "Impex Corp is an auto company that offers its customers a wide range of products and services related to the automotive industry. Having become a leading player in the market, Impex Corp has several key advantages that make them an ideal choice for buyers",
       "buttonText": "More details"
     },
-    "CatalogBlock":{
+    "CatalogBlock": {
       "titles": {
-        "mainTitle":"Catalog",
+        "mainTitle": "Catalog",
         "newProducts": "New products",
         "fromChina": "Cars from China",
         "fromKorea": "Cars from Korea"
       },
       "buttonText": "More details"
     },
-    "FAQBlock":{
-      "titles":{
+    "FAQBlock": {
+      "titles": {
         "mainTitle": "Frequently asked Questions"
       }
+    },
+    "firstBlock": {
+      "title": "security, reliability, and style in every detail!"
     }
   },
   "footer": {
@@ -67,5 +70,8 @@
       "number2": "+996 (700) 22-25-32",
       "number3": "+996 (708) 04-02-90"
     }
+  },
+  "uiButton": {
+    "title": "call"
   }
 }
