--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -24,19 +24,22 @@
       "text": "Impex Corp — это авто компания, которая предлагает своим клиентам широкий ассортимент товаров и услуг, связанных с автомобильной индустрией. Став ведущим игроком на рынке, Impex Corp обладает несколькими ключевыми преимуществами, которые делают их идеальным выбором для покупателей",
       "buttonText": "Подробнее"
     },
-    "CatalogBlock":{
+    "CatalogBlock": {
       "titles": {
-        "mainTitle":"Каталог",
+        "mainTitle": "Каталог",
         "newProducts": "Новинки",
         "fromChina": "Авто из Китая",
         "fromKorea": "Авто из Кореи"
       },
       "buttonText": "Подробнее"
     },
-    "FAQBlock":{
-      "titles":{
+    "FAQBlock": {
+      "titles": {
         "mainTitle": "Часто задаваемые вопросы"
       }
+    },
+    "firstBlock": {
+      "title": "безопасность, надежность и стиль в каждой детали!"
     }
   },
   "footer": {
@@ -66,5 +69,8 @@
       "number2": "+996 (700) 22-25-32",
       "number3": "+996 (708) 04-02-90"
     }
+  },
+  "uiButton": {
+    "title": "Позвонить"
   }
 }
