--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -39,7 +39,10 @@
       }
     },
     "firstBlock": {
-      "title": "安全、可靠、时尚，体现在每个细节上"
+      "title1": "安全,",
+      "title2": "可靠、时尚",
+      "title3": "体现在每个细节上",
+      "button": "称呼"
     }
   },
   "footer": {
@@ -65,8 +68,5 @@
       "number2": "+996 (700) 22-25-32",
       "number3": "+996 (708) 04-02-90"
     }
-  },
-  "uiButton": {
-    "title": "称呼"
   }
 }
