fixed and finished

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -43,7 +43,7 @@
       "title1": "security,",
       "title2": "reliability, and style in",
       "title3": "every detail!",
-      "button": "Call"
+      "buttonText": "Call"
     }
   },
   "footer": {
