--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -42,7 +42,7 @@
       "title1": "коопсуздук,",
       "title2": "ишенимдүүлүк, жана ар бир майда-чүйдөсүнө",
       "title3": "чейин стиль!",
-      "button": "Чалуу"
+      "buttonText": "Чалуу"
     }
   },
   "footer": {
