--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -42,7 +42,7 @@
       "title1": "безопасность,",
       "title2": "надежность и стиль в",
       "title3": "каждой детали!",
-      "button": "Позвонить"
+      "buttonText": "Позвонить"
     }
   },
   "footer": {
