--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -42,7 +42,7 @@
       "title1": "安全,",
       "title2": "可靠、时尚",
       "title3": "体现在每个细节上",
-      "button": "称呼"
+      "buttonText": "称呼"
     }
   },
   "footer": {
