--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -39,9 +39,7 @@
       }
     },
     "firstBlock": {
-      "title1": "безопасность,",
-      "title2": "надежность и стиль в",
-      "title3": "каждой детали!",
+      "title1": "Безопасность, Надежность и Стиль в каждой детали!",
       "buttonText": "Позвонить"
     }
   },
