set up translations

--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -40,6 +40,17 @@
     },
     "firstBlock": {
       "title": "коопсуздук, ишенимдүүлүк жана ар бир майда-чүйдөсүнө чейин стиль!"
+    },
+    "OurServices":{
+      "title": "Биздин кызматтар",
+      "search": "Издөө жана сатып алуу",
+      "cars": "Кореядан жана Кытайдан келген машиналар",
+      "delivery": "Унаа жеткирүү",
+      "guarantee": "гарантия менен Бишкекте",
+      "registration": "Кыргыз Республикасында автоунааларды каттоо",
+      "accounting": "(РЭО ГАИ) жана Кыргыз Республикасынын чегинен тышкары каттоодон чыгаруу",
+      "insurance": "Толук камсыздандыруу",
+      "auto":"Кыргызстанга жеткиргенге чейин унааңыздын"
     }
   },
   "footer": {
