--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -40,7 +40,19 @@
     },
     "firstBlock": {
       "title": "безопасность, надежность и стиль в каждой детали!"
+    },
+    "OurServices":{
+      "title": "Наши услуги",
+      "search": "Поиск и покупка",
+      "cars": "машины из Кореи и Китая",
+      "delivery": "Доставка авто ",
+      "guarantee":"с гарантией в Бишкек",
+      "registration": "Регистрация авто в КР",
+      "accounting":"(РЕО ГАИ) и снятие с учета за предели КР",
+      "insurance": "Полная страховка",
+      "auto": "вашего авто до доставки в Кыргызстан"
     }
+
   },
   "footer": {
     "aboutus": {
