done half footer adaptive

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -58,8 +58,8 @@
       "counseling": "Online consultations"
     },
     "branches": {
-      "name": "Our branches",
-      "address1": "VMG5+F44, Gorky, Shabdan Baatyr St., Bishkek",
+      "name": "Branches",
+      "address1": "street Gorky,  Bishkek",
       "address2": "38a Ankara str., Bishkek",
       "address3": "ul. Isakeeva 1/2, Bishkek city"
     },
