--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -57,8 +57,8 @@
       "counseling": "Онлайн консультациялар"
     },
     "branches": {
-      "name": "Биздин филиалдар",
-      "address1": "VMG5+F44, Горький, Бишкек ш., Шабдан Баатыр көч",
+      "name": "Филиалдар",
+      "address1": "Горький, Бишкек ш.",
       "address2": "Бишкек ш., Анкара көч. 38а",
       "address3": "ст. Исакеева 1/2, Бишкек ш"
     },
