--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -55,8 +55,8 @@
       "counseling": "Онлайн-консультации"
     },
     "branches": {
-      "name": "Наши филиалы",
-      "address1": "VMG5+F44, горького, ул.Шабдан баатыра, Бишкек",
+      "name": "Филиалы",
+      "address1": " ул.Шабдан баатыра, Бишкек",
       "address2": "ул.Анкара 38а, Бишкек",
       "address3": "ул. Исакеева 1/2, г. Бишкек"
     },
