--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -58,9 +58,9 @@
     },
     "branches": {
       "name": "Филиалдар",
-      "address1": "Горький, Бишкек ш.",
-      "address2": "Бишкек ш., Анкара көч. 38а",
-      "address3": "ст. Исакеева 1/2, Бишкек ш"
+      "address1": "Горький көч. 20а, Бишкек ш.",
+      "address2": "Анкара көч. 38а, Бишкек ш. ",
+      "address3": "Исакеева көч. 1/2, Бишкек ш"
     },
     "contacts": {
       "name": "Байланыштар",
