--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -56,9 +56,9 @@
     },
     "branches": {
       "name": "Филиалы",
-      "address1": " ул.Шабдан баатыра, Бишкек",
-      "address2": "ул.Анкара 38а, Бишкек",
-      "address3": "ул. Исакеева 1/2, г. Бишкек"
+      "address1": "ул. Горького 20а, Бишкек",
+      "address2": "ул. Анкара 38а, Бишкек",
+      "address3": "ул. Исакеева 1/2, Бишкек"
     },
     "contacts": {
       "name": "Контакты",
