--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -40,9 +40,7 @@
       }
     },
     "firstBlock": {
-      "title1": "security,",
-      "title2": "reliability, and style in",
-      "title3": "every detail!",
+      "title1": "Security, Reliability, and Style in every detail!",  
       "buttonText": "Call"
     }
   },
