--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -39,9 +39,7 @@
       }
     },
     "firstBlock": {
-      "title1": "коопсуздук,",
-      "title2": "ишенимдүүлүк, жана ар бир майда-чүйдөсүнө",
-      "title3": "чейин стиль!",
+      "title1": "Коопсуздук, Ишенимдүү, ар бир майда-чүйдөсүнө чейин Стиль!",
       "buttonText": "Чалуу"
     }
   },
