--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -46,10 +46,10 @@
       "title": "Наши услуги",
       "search": "Поиск и покупка",
       "cars": "машины из Кореи и Китая",
-      "delivery": "Доставка авто ",
+      "delivery": "Доставка авто",
       "guarantee":"с гарантией в Бишкек",
       "registration": "Регистрация авто в КР",
-      "accounting":"(РЕО ГАИ) и снятие с учета за предели КР",
+      "accounting":"(РЕО ГАИ) и снятие с учета за пределы КР",
       "insurance": "Полная страховка",
       "auto": "вашего авто до доставки в Кыргызстан"
     }
