--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -46,25 +46,33 @@
   "footer": {
     "aboutus": {
       "name": "О нас",
-      "company": "Наша копмания",
-      "services": "Услуги"
+      "menu": {
+        "company": "Наша копмания",
+        "services": "Услуги"
+      }
     },
     "support": {
       "name": "Поддержка",
-      "feedback": "Обратная связь",
-      "counseling": "Онлайн-консультации"
+      "menu": {
+        "feedback": "Обратная связь",
+        "counseling": "Онлайн-консультации"
+      }
     },
     "branches": {
       "name": "Филиалы",
-      "address1": "ул. Горького 20а, Бишкек",
-      "address2": "ул. Анкара 38а, Бишкек",
-      "address3": "ул. Исакеева 1/2, Бишкек"
+      "menu": {
+        "address1": "ул. Горького 20а, Бишкек",
+        "address2": "ул. Анкара 38а, Бишкек",
+        "address3": "ул. Исакеева 1/2, Бишкек"
+      }
     },
     "contacts": {
       "name": "Контакты",
+      "menu": {
       "number1": "+996 (555) 25-12-56",
       "number2": "+996 (700) 22-25-32",
       "number3": "+996 (708) 04-02-90"
+      }
     }
   }
 }
