--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -18,7 +18,6 @@
       }
     }
   },
-
   "HomePage": {
     "GreetingBlock": {
       "title": "Welcome to the Impex Corp car showroom",
@@ -40,32 +39,40 @@
       }
     },
     "firstBlock": {
-      "title1": "Security, Reliability, and Style in every detail!",  
+      "title1": "Security, Reliability, and Style in every detail!",
       "buttonText": "Call"
     }
   },
   "footer": {
     "aboutus": {
       "name": "About Us",
-      "company": "Our company",
-      "services": "Services"
+      "menu": {
+        "company": "Our company",
+        "services": "Services"
+      }
     },
     "support": {
       "name": "Support",
-      "feedback": "Feedback",
-      "counseling": "Online consultations"
+      "menu": {
+        "feedback": "Feedback",
+        "counseling": "Online consultations"
+      }
     },
     "branches": {
       "name": "Branches",
-      "address1": "20a Gorky St.,  Bishkek",
-      "address2": "38a Ankara St., Bishkek",
-      "address3": "Isakeeva 1/2 St., Bishkek"
+      "menu": {
+        "address1": "20a Gorky St.,  Bishkek",
+        "address2": "38a Ankara St., Bishkek",
+        "address3": "Isakeeva 1/2 St., Bishkek"
+      }
     },
     "contacts": {
       "name": "Contacts",
-      "number1": "+996 (555) 25-12-56",
-      "number2": "+996 (700) 22-25-32",
-      "number3": "+996 (708) 04-02-90"
+      "menu": {
+        "number1": "+996 (555) 25-12-56",
+        "number2": "+996 (700) 22-25-32",
+        "number3": "+996 (708) 04-02-90"
+      }
     }
   }
 }
