--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -46,25 +46,33 @@
   "footer": {
     "aboutus": {
       "name": "Биз жөнүндө",
-      "company": "Биздин компания",
-      "services": "Кызматтар"
+      "menu": {
+        "company": "Биздин компания",
+        "services": "Кызматтар"
+      }
     },
     "support": {
       "name": "Колдоо",
-      "feedback": "Кайра байланыш",
-      "counseling": "Онлайн консультациялар"
+      "menu": {
+        "feedback": "Кайра байланыш",
+        "counseling": "Онлайн консультациялар"
+      }
     },
     "branches": {
       "name": "Филиалдар",
-      "address1": "Горький көч. 20а, Бишкек ш.",
-      "address2": "Анкара көч. 38а, Бишкек ш. ",
-      "address3": "Исакеева көч. 1/2, Бишкек ш"
+      "menu": {
+        "address1": "Горький көч. 20а, Бишкек ш.",
+        "address2": "Анкара көч. 38а, Бишкек ш. ",
+        "address3": "Исакеева көч. 1/2, Бишкек ш"
+      }
     },
     "contacts": {
       "name": "Байланыштар",
-      "number1": "+996 (555) 25-12-56",
-      "number2": "+996 (700) 22-25-32",
-      "number3": "+996 (708) 04-02-90"
+      "menu": {
+        "number1": "+996 (555) 25-12-56",
+        "number2": "+996 (700) 22-25-32",
+        "number3": "+996 (708) 04-02-90"
+      }
     }
   }
 }
