Header postion fixed

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -48,10 +48,10 @@
       "cars": "машины из Кореи и Китая",
       "delivery": "Доставка авто",
       "guarantee":"с гарантией в Бишкек",
-      "registration": "Регистрация авто в КР",
-      "accounting":"(РЕО ГАИ) и снятие с учета за пределы КР",
+      "registration": "Регистрация авто",
+      "accounting":"cнятие с учета",
       "insurance": "Полная страховка",
-      "auto": "вашего авто до доставки в Кыргызстан"
+      "auto": "до доставки в Кыргызстан"
     }
 
   },
