--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -45,13 +45,13 @@
     "OurServices":{
       "title": "Биздин кызматтар",
       "search": "Издөө жана сатып алуу",
-      "cars": "Кореядан жана Кытайдан келген машиналар",
+      "cars": "Корея жана Кытайдан машиналар",
       "delivery": "Унаа жеткирүү",
-      "guarantee": "гарантия менен Бишкекте",
-      "registration": "Кыргыз Республикасында автоунааларды каттоо",
-      "accounting": "(РЭО ГАИ) жана Кыргыз Республикасынын чегинен тышкары каттоодон чыгаруу",
+      "guarantee": "гарантия менен Бишкекке",
+      "registration": "Автоунааларды каттоо",
+      "accounting": "каттоодон чыгаруу (РЭО ГАИ)",
       "insurance": "Толук камсыздандыруу",
-      "auto":"Кыргызстанга жеткиргенге чейин унааңыздын"
+      "auto":"Кыргызстанга жеткиргенге чейин"
     }
   },
   "footer": {
