--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -49,7 +49,7 @@
       "delivery": "Доставка авто",
       "guarantee":"с гарантией в Бишкек",
       "registration": "Регистрация авто",
-      "accounting":"cнятие с учета",
+      "accounting":"cнятие с учета (РЭО ГАИ)",
       "insurance": "Полная страховка",
       "auto": "до доставки в Кыргызстан"
     }
