--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,5 @@
 {
-  "text": "Text",
+  "notFoundText": "Кечиресиз, бул барак табылган жок.",
   "header": {
     "search": "Search",
     "catalogue": "Catalog",
