--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -1,5 +1,5 @@
 {
-  "text": "Кыргызча текст",
+  "notFoundText": "Кечиресиз, бул барак табылган жок.",
   "header": {
     "search": "Издөө",
     "catalogue": "Каталог",
