--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,5 @@
 {
-  "text": "Текст",
+  "notFoundText": "Извините, страница не надйена.",
   "header": {
     "search": "Поиск",
     "catalogue": "Каталог",
@@ -47,9 +47,9 @@
       "search": "Поиск и покупка",
       "cars": "машины из Кореи и Китая",
       "delivery": "Доставка авто",
-      "guarantee":"с гарантией в Бишкек",
+      "guarantee":"с гарантией в город Бишкек",
       "registration": "Регистрация авто",
-      "accounting":"cнятие с учета (РЭО ГАИ)",
+      "accounting":"и cнятие с учета (РЭО ГАИ)",
       "insurance": "Полная страховка",
       "auto": "до доставки в Кыргызстан"
     }
