Add fixed header

--- a/locales/ru/translation.json
+++ b/locales/ru/translation.json
@@ -1,5 +1,5 @@
 {
-  "notFoundText": "Извините, страница не надйена.",
+  "notFoundText": "Извините, страница не найдена.",
   "header": {
     "search": "Поиск",
     "catalogue": "Каталог",
