--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,5 @@
 {
-  "notFoundText": "Кечиресиз, бул барак табылган жок.",
+  "notFoundText": "Sorry, this page can not be found.",
   "header": {
     "search": "Search",
     "catalogue": "Catalog",
