--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,6 +6,7 @@
     "services": "Services",
     "calculator": "Calculator",
     "ourcompany": "Our Company",
+    "modalButton":"Open",
     "HeaderCatalog": {
       "model": "Popular models",
       "countries": {
