--- a/public/locales/ky/translation.json
+++ b/public/locales/ky/translation.json
@@ -6,6 +6,7 @@
     "services": "Кызматтар",
     "calculator": "Калькулятор",
     "ourcompany": "Биздин компания",
+    "modalButton":"Ачуу",
     "HeaderCatalog": {
       "model": "Популярдуу моделдер",
       "countries": {
