--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,6 +6,7 @@
     "services": "Услуги",
     "calculator": "Калькулятор",
     "ourcompany": "Наша компания",
+    "modalButton":"Открыть",
     "HeaderCatalog": {
       "model": "Популярные модели",
       "countries": {
